--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>I'm a Web Developer</h2></body></hr>
         <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a></h3>
          <img src="Deepu-birthday-invite.png"/>
-         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>  
+         <h3><a href="movie-ranking.html">Movie Ranking Project</a></h3>  
          <img src="Deepu-fav-movie.png">
          <h3><a href="about.html">About Me</a></h3><br>
          <h3><a href="contact.html">Contact Me</a></h3>
