--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <title>
-          Deepu's Portfolio
+          Wish me with your Heart
         </title>
     </head>
     <body>
-        <h1>Deepu's Portfolio project</h1>
-        <h2>I'm a Web Developer</h2></body></hr>
+        <h1>Its my Birthday</h1>
+        <h2>Just say Many More Happy Returns of the Day</h2></body></hr>
         <h3><a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a></h3>
          <img src="Deepu-birthday-invite.png"/>
-         <h3><a href="movie-ranking.html">Movie Ranking Project</a></h3>  
+         <!-- <h3><a href="movie-ranking.html">Movie Ranking Project</a></h3> -->  
          <img src="Deepu-fav-movie.png">
          <h3><a href="about.html">About Me</a></h3><br>
          <h3><a href="contact.html">Contact Me</a></h3>
